--- a/index.html
+++ b/index.html
@@ -4,9 +4,172 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
+    <header class="main-header">
+      <nav class="navigation">
+        <a class="main-logo" href="/">
+          <img src="#" alt="Логотип Седона">
+        </a>
+        <ul class="header-menu">
+          <li class="header-item">
+            <a class="header-link" href="#">Главная</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">О Седоне</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        <ul class="header-buttons-list">
+          <li class="button-item">
+            <a class="button-search" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="button-item">
+            <a class="button-search" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            </a>
+          </li>
+          <li class="button-item">
+            <a class="button-search" href="#">
+              <span class="visually-hidden">
+                Хочу сюда
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="page-main">
+      <section class="section-hero">
+        <h1 class="visually-hidden">Седона</h1>
+        <img class="welcome-svg" src="#" alt="Добро пожаловать">
+        <img class="sedona-svg" src="#" alt="Седона">
+        <img class="quote-svg" src="#" alt="Цитата-потому что гранд каньону везет">
+      </section>
+
+      <section class="section-about">
+        <h2 class="about-page">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="about-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="section-advantages">
+        <ul class="advantages-list">
+          <li class="advantages-item advantages-item-image">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-text">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item advantages-item-lightgray ">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item advantages-item-image">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="promo-text">
+        <h2 class="promo-about-page">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="promo-about-text">Опытный персонал и качественное обслуживание!</p>
+      </section>
+
+      <section class="further-benefits">
+        <ul class="benefits-list">
+          <li class="benefits-item-blue">
+            <h3 class="benefits-title">Жилье</h3>
+            <p class="about-benefits">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+          <li class="benefits-item-white">
+            <h3 class="benefits-title">Еда</h3>
+            <p class="about-benefits">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="benefits-item-blue">
+            <h3 class="benefits-title">Сувениры</h3>
+            <p class="about-benefits">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="booking">
+        <h2 class="about-page">Заинтересовались?</h2>
+        <p class="about-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button-hotel-search" href="#">
+            <span class="visually-hidden">
+              Поиск гостиницы в Седоне
+            </span>
+          </a>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <section class="mailing-list ">
+        <h2 class="mailing-list-header">Подпишитесь на рассылку</h2>
+        <p class="mailing-list-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form  class="mailing-list-form" action="https://echo.htmlacademy.ru">
+          <label class="visually-hidden" for="email">
+            Ваш e-mail
+          </label>
+          <input class="input-email" type="email" id="email" name="email" placeholder="Ваш e-mail">
+          <button class="submit-button" type="submit">
+            Подписаться
+          </button>
+        </form>
+      </section>
+
+      <ul class="social-list">
+        <li class="social-list-item">
+          <a class="social-link" href=" https://vk.com/htmlacademy">
+            <span class="visually-hidden">
+              Vkontakte
+            </span>
+            <img class="social-link-icon" src="#" alt="Логотип Vkontakte">
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a class="social-link" href="https://t.me/htmlacademy ">
+            <span class="visually-hidden">
+              Telegram
+            </span>
+            <img class="social-link-icon" src="#" alt="Логотип Telegram">
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">
+              Youtube
+            </span>
+            <img class="social-link-icon" src="#" alt="Логотип Youtube">
+          </a>
+        </li>
+      </ul>
+
+      <a class="footer-tel" href="tel:+78121212">
+        +7 (812)-12-12
+      </a>
+
+      <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">
+          html academy
+        </span>
+        <img class="logo-htmlacademy" src="#" alt="Логотип html academy">
+      </a>
+    </footer>
   </body>
 </html>
