--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="main-logo" href="/">
-          <img src="#" alt="Логотип Седона">
+          <img src="./images/.svg" alt="Логотип Седона">
         </a>
         <ul class="header-menu">
           <li class="header-item">
@@ -19,7 +19,7 @@
             <a class="header-link" href="#">О Седоне</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Гостиницы</a>
+            <a class="header-link" href="./catalog.html">Гостиницы</a>
           </li>
         </ul>
 
@@ -52,9 +52,7 @@
     <main class="page-main">
       <section class="section-hero">
         <h1 class="visually-hidden">Седона</h1>
-        <img class="welcome-svg" src="#" alt="Добро пожаловать">
-        <img class="sedona-svg" src="#" alt="Седона">
-        <img class="quote-svg" src="#" alt="Цитата-потому что гранд каньону везет">
+        <img class="welcome-svg" src="#" alt="Добро пожаловать в Седону">
       </section>
 
       <section class="section-about">
@@ -67,6 +65,7 @@
           <li class="advantages-item advantages-item-image">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="advantages-image" src="#" alt="Фотография дома с балконом и цветами">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -81,6 +80,7 @@
             <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item advantages-item-image">
+            <img class="advantages-image" src="#" alt="Фотография каньона">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -96,10 +96,12 @@
         <ul class="benefits-list">
           <li class="benefits-item-blue">
             <h3 class="benefits-title">Жилье</h3>
-            <p class="about-benefits">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+            <p class="about-benefits">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
           <li class="benefits-item-white">
             <h3 class="benefits-title">Еда</h3>
             <p class="about-benefits">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
           <li class="benefits-item-blue">
             <h3 class="benefits-title">Сувениры</h3>
             <p class="about-benefits">Не только китайского, но и настоящего местного производства!</p>
@@ -109,12 +111,8 @@
 
       <section class="booking">
         <h2 class="about-page">Заинтересовались?</h2>
-        <p class="about-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="button-hotel-search" href="#">
-            <span class="visually-hidden">
-              Поиск гостиницы в Седоне
-            </span>
-          </a>
+        <p class="about-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button-hotel-search" href="#">Поиск гостиницы в Седоне</a>
       </section>
     </main>
 
@@ -160,8 +158,8 @@
         </li>
       </ul>
 
-      <a class="footer-tel" href="tel:+78121212">
-        +7 (812)-12-12
+      <a class="footer-tel" href="tel:+78128121212">
+        +7 (812)-812-12-12
       </a>
 
       <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
