Добавляет оптимизированные картинки

--- a/catalog.html
+++ b/catalog.html
@@ -9,11 +9,11 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="main-logo" href="/">
-          <img src="#" alt="Логотип Седона">
+          <img src="./images/icons/logo-header.svg" width="140" height="70" alt="Логотип Седона">
         </a>
         <ul class="header-menu">
           <li class="header-item">
-            <a class="header-link" href="#">Главная</a>
+            <a class="header-link" href="./index.html">Главная</a>
           </li>
           <li class="header-item">
             <a class="header-link" href="#">О Седоне</a>
@@ -26,16 +26,14 @@
         <ul class="header-buttons-list">
           <li class="button-item">
             <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
+              <img class="search-icon" src="./images/icons/search.svg" width="20" height="20" alt="Иконка поиска">
             </a>
           </li>
           <li class="button-item">
             <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
+              <span class="visually-hidden">Избранное</span>
+              <img class="search-icon" src="./images/icons/favourite.svg" width="18" height="17" alt="Иконка сердечко">
             </a>
           </li>
           <li class="button-item">
@@ -133,19 +131,19 @@
               <li class="change-view-item">
                 <a class="change-view-button" href="#">
                   <span class="visually-hidden">tiles</span>
-                  <img src="#" alt="Иконка-плитка">
+                  <img class="change-icons" src="./images/icons/icon-tiles.svg" width="16" height="14" alt="Иконка-плитка">
                 </a>
               </li>
               <li class="change-view-item">
                 <a class="change-view-button" href="#">
                   <span class="visually-hidden">window</span>
-                  <img src="#" alt="Иконка-окошко">
+                  <img class="change-icons" src="./images/icons/icon-window.svg" width="16" height="14" alt="Иконка-окошко">
                 </a>
               </li>
               <li class="change-view-item">
                 <a class="change-view-button" href="#">
                   <span class="visually-hidden">list</span>
-                  <img src="#" alt="Иконка-список">
+                  <img class="change-icons" src="./images/icons/icon-list.svg" width="16" height="14" alt="Иконка-список">
                 </a>
               </li>
             </ul>
@@ -156,7 +154,7 @@
           <li class="product-list-item">
             <article class="product-card">
               <a class="product-link-wrapper" href="#">
-                <img class="product-image" src="#" alt="Фотография из отеля Amara Resort&Spa с видом на звездное небо">
+                <img class="product-image" src="./images/hotel-1.jpg" width="300" height="212" alt="Фотография из отеля Amara Resort&Spa с видом на звездное небо">
                 <h3 class="product-name">Amara Resort&Spa</h3>
               </a>
               <p class="product-description">
@@ -170,19 +168,19 @@
               <div class="raiting-wrapper">
               <ul class="raiting-list">
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star visually-hidden" src="#" alt="звездочка">
+                  <img class="raiting-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
                 <span class="raiting-text">Рейтинг: 8,5</span>
@@ -193,7 +191,7 @@
           <li class="product-list-item">
             <article class="product-card">
               <a class="product-link-wrapper" href="#">
-                <img class="product-image" src="#" alt="Фотография из отеля Villas at Poco Diablo с видом на горы">
+                <img class="product-image" src="./images/hotel-2.jpg" width="300" height="212" alt="Фотография из отеля Villas at Poco Diablo с видом на горы">
                 <h3 class="product-name">Villas at Poco Diablo</h3>
               </a>
               <p class="product-description">
@@ -208,19 +206,19 @@
               <div class="raiting-wrapper">
                 <ul class="raiting-list">
                   <li>
-                    <img class="raiting-star" src="#" alt="звездочка">
+                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="#" alt="звездочка">
+                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="#" alt="звездочка">
+                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="#" alt="звездочка">
+                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="visually-hidden" src="#" alt="звездочка">
+                    <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                 </ul>
 
@@ -232,7 +230,7 @@
           <li class="product-list-item">
             <article class="product-card">
               <a class="product-link-wrapper" href="#">
-                <img class="product-image" src="#" alt="Фотография из отеля Desert Quail Inn с видом на каньон">
+                <img class="product-image" src="./images/hotel-3.jpg" width="300" height="212" alt="Фотография из отеля Desert Quail Inn с видом на каньон">
                 <h3 class="product-name">Desert Quail Inn</h3>
               </a>
               <p class="product-description">
@@ -246,19 +244,19 @@
               <div class="raiting-wrapper">
               <ul class="raiting-list">
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="visually-hidden" src="#" alt="звездочка">
+                  <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="visually-hidden" src="#" alt="звездочка">
+                  <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
                 <span class="raiting-text">Рейтинг: 6,9</span>
@@ -269,7 +267,7 @@
           <li class="product-list-item">
             <article class="product-card">
               <a class="product-link-wrapper" href="#">
-                <img class="product-image" src="#" alt="Фотография из отеля GreenTree Inn с видом на ночной каьон">
+                <img class="product-image" src="./images/hotel-4.jpg" width="300" height="212" alt="Фотография из отеля GreenTree Inn с видом на ночной каьон">
                 <h3 class="product-name">GreenTree Inn</h3>
               </a>
               <p class="product-description">
@@ -283,19 +281,19 @@
               <div class="raiting-wrapper">
               <ul class="raiting-list">
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="#" alt="звездочка">
+                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="visually-hidden" src="#" alt="звездочка">
+                  <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="visually-hidden" src="#" alt="звездочка">
+                  <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="visually-hidden" src="#" alt="звездочка">
+                  <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
                 <span class="raiting-text">Рейтинг: 5,0</span>
@@ -350,7 +348,7 @@
             <span class="visually-hidden">
               VK
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип VK">
+            <img class="social-link-icon" src="./images/icons/VK.svg" width="24" height="14" alt="Логотип VK">
           </a>
         </li>
         <li class="social-list-item">
@@ -358,7 +356,7 @@
             <span class="visually-hidden">
               Telegram
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип Telegram">
+            <img class="social-link-icon" src="./images/icons/tlg.svg" width="18" height="16" alt="Логотип Telegram">
           </a>
         </li>
         <li class="social-list-item">
@@ -366,7 +364,7 @@
             <span class="visually-hidden">
               Youtube
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип Youtube">
+            <img class="social-link-icon" src="./images/icons/youtube.svg" width="22" height="17" alt="Логотип Youtube">
           </a>
         </li>
       </ul>
@@ -379,7 +377,7 @@
         <span class="visually-hidden">
           html academy
         </span>
-        <img class="logo-htmlacademy" src="#" alt="Логотип html academy">
+        <img class="logo-htmlacademy" src="./images/icons/logo-html-acad.svg" width="114.9" height="32.9" alt="Логотип html academy">
       </a>
     </footer>
   </body>
