--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="main-logo" href="/">
-          <img src="./images/.svg" alt="Логотип Седона">
+          <img src="./images/icons/logo-header.svg" width="140" height="70" alt="Логотип Седона">
         </a>
         <ul class="header-menu">
           <li class="header-item">
@@ -26,16 +26,14 @@
         <ul class="header-buttons-list">
           <li class="button-item">
             <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
+              <img class="search-icon" src="./images/icons/search.svg" width="20" height="20" alt="Иконка поиска">
             </a>
           </li>
           <li class="button-item">
             <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
+              <span class="visually-hidden">Избранное</span>
+              <img class="search-icon" src="./images/icons/favourite.svg" width="18" height="17" alt="Иконка сердечко">
             </a>
           </li>
           <li class="button-item">
@@ -52,7 +50,7 @@
     <main class="page-main">
       <section class="section-hero">
         <h1 class="visually-hidden">Седона</h1>
-        <img class="welcome-svg" src="#" alt="Добро пожаловать в Седону">
+        <img class="welcome-svg" src="./images/icons/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
       </section>
 
       <section class="section-about">
@@ -65,7 +63,7 @@
           <li class="advantages-item advantages-item-image">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" src="#" alt="Фотография дома с балконом и цветами">
+            <img class="advantages-image" src="./images/photo-1.jpg" width="800" height="385" alt="Фотография дома с балконом и цветами">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -80,7 +78,7 @@
             <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item advantages-item-image">
-            <img class="advantages-image" src="#" alt="Фотография каньона">
+            <img class="advantages-image" src="./images/photo-2.jpg" width="800" height="385" alt="Фотография каньона">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -95,14 +93,17 @@
       <section class="further-benefits">
         <ul class="benefits-list">
           <li class="benefits-item-blue">
+            <img class="benefits-icons" src="./images/icons/icon-home.svg" width="75" height="72" alt="Иконка домика">
             <h3 class="benefits-title">Жилье</h3>
             <p class="about-benefits">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="benefits-item-white">
+            <img class="benefits-icons" src="./images/icons/food.svg" width="74" height="70" alt="Иконка бургера">
             <h3 class="benefits-title">Еда</h3>
             <p class="about-benefits">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="benefits-item-blue">
+            <img class="benefits-icons" src="./images/icons/icon-gift.svg" width="64" height="76" alt="Иконка подарка">
             <h3 class="benefits-title">Сувениры</h3>
             <p class="about-benefits">Не только китайского, но и настоящего местного производства!</p>
           </li>
@@ -137,7 +138,7 @@
             <span class="visually-hidden">
               Vkontakte
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип Vkontakte">
+            <img class="social-link-icon" src="./images/icons/VK.svg" width="24" height="14" alt="Логотип Vkontakte">
           </a>
         </li>
         <li class="social-list-item">
@@ -145,7 +146,7 @@
             <span class="visually-hidden">
               Telegram
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип Telegram">
+            <img class="social-link-icon" src="./images/icons/tlg.svg" width="18" height="16" alt="Логотип Telegram">
           </a>
         </li>
         <li class="social-list-item">
@@ -153,7 +154,7 @@
             <span class="visually-hidden">
               Youtube
             </span>
-            <img class="social-link-icon" src="#" alt="Логотип Youtube">
+            <img class="social-link-icon" src="./images/icons/youtube.svg" width="22" height="17" alt="Логотип Youtube">
           </a>
         </li>
       </ul>
@@ -166,7 +167,7 @@
         <span class="visually-hidden">
           html academy
         </span>
-        <img class="logo-htmlacademy" src="#" alt="Логотип html academy">
+        <img class="logo-htmlacademy" src="./images/icons/logo-html-acad.svg" width="114.9" height="32.9" alt="Логотип html academy">
       </a>
     </footer>
   </body>
