--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
 
   <body>
@@ -31,17 +32,13 @@
             </a>
           </li>
           <li class="button-item">
-            <a class="button-search" href="#">
+            <a class="button-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <img class="search-icon" src="./images/icons/favourite.svg" width="18" height="17" alt="Иконка сердечко">
+              <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко">
             </a>
           </li>
           <li class="button-item">
-            <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Хочу сюда
-              </span>
-            </a>
+            <a class="button-want" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -101,10 +98,10 @@
           <legend class="search-form-section-title">Стоимость,₽</legend>
 
           <input class="price-input" type="number" id="from" name="from">
-          <label class="price-input-name" for="from">0</label>
+          <label class="price-input-name" for="from">от</label>
 
           <input class="price-input" type="number" id="to" name="to">
-          <label class="price-input-name" for="to">9000</label>
+          <label class="price-input-name" for="to">до</label>
 
           <div class="range-bar">
             <div class="range-button-left"></div>
@@ -113,7 +110,7 @@
         </fieldset>
 
         <fieldset class="search-form-section">
-          <button class="submit-button" type="submit">Применить</button>
+          <button class="submit-button-catalog" type="submit">Применить</button>
           <button class="reset-button" type="reset">Сбросить</button>
         </fieldset>
       </form>
@@ -163,27 +160,27 @@
               </p>
               <div class="product-buttons">
                 <a class="product-about-link" href="#">Подробнее</a>
-                <a class="product-favourite-link" href="#">В избранное</a>
+                <a class="product-favorite-link" href="#">В избранное</a>
               </div>
-              <div class="raiting-wrapper">
-              <ul class="raiting-list">
+              <div class="rating-wrapper">
+              <ul class="rating-list">
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
-                <span class="raiting-text">Рейтинг: 8,5</span>
+                <span class="rating-text">Рейтинг: 8,5</span>
               </div>
             </article>
           </li>
@@ -200,29 +197,29 @@
               </p>
               <div class="product-buttons">
                 <a class="product-about-link" href="#">Подробнее</a>
-                <a class="product-my-favourite-link" href="#">В избранном</a>
+                <a class="product-favorite-link in-favorite" href="#">В избранном</a>
               </div>
 
-              <div class="raiting-wrapper">
-                <ul class="raiting-list">
+              <div class="rating-wrapper">
+                <ul class="rating-list">
                   <li>
-                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                    <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                    <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                    <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
-                    <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                    <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                   <li>
                     <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                   </li>
                 </ul>
 
-                <span class="raiting-text">Рейтинг: 9,2</span>
+                <span class="rating-text">Рейтинг: 9,2</span>
               </div>
             </article>
           </li>
@@ -239,18 +236,18 @@
               </p>
               <div class="product-buttons">
                 <a class="product-about-link" href="#">Подробнее</a>
-                <a class="product-favourite-link" href="#">В избранное</a>
+                <a class="product-favorite-link" href="#">В избранное</a>
               </div>
-              <div class="raiting-wrapper">
-              <ul class="raiting-list">
+              <div class="rating-wrapper">
+              <ul class="rating-list">
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
                   <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
@@ -259,7 +256,7 @@
                   <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
-                <span class="raiting-text">Рейтинг: 6,9</span>
+                <span class="rating-text">Рейтинг: 6,9</span>
               </div>
             </article>
           </li>
@@ -276,15 +273,15 @@
               </p>
               <div class="product-buttons">
                 <a class="product-about-link" href="#">Подробнее</a>
-                <a class="product-favourite-link" href="#">В избранное</a>
+                <a class="product-favorite-link" href="#">В избранное</a>
               </div>
-              <div class="raiting-wrapper">
-              <ul class="raiting-list">
+              <div class="rating-wrapper">
+              <ul class="rating-list">
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
-                  <img class="raiting-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                  <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
                 <li>
                   <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
@@ -296,7 +293,7 @@
                   <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
                 </li>
               </ul>
-                <span class="raiting-text">Рейтинг: 5,0</span>
+                <span class="rating-text">Рейтинг: 5,0</span>
               </div>
             </article>
           </li>
@@ -327,7 +324,7 @@
       </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer no-picture">
       <section class="mailing-list ">
         <h2 class="mailing-list-header">Подпишитесь на рассылку</h2>
         <p class="mailing-list-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
