--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
 
   <body>
@@ -31,17 +32,13 @@
             </a>
           </li>
           <li class="button-item">
-            <a class="button-search" href="#">
+            <a class="button-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <img class="search-icon" src="./images/icons/favourite.svg" width="18" height="17" alt="Иконка сердечко">
+              <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко">
             </a>
           </li>
           <li class="button-item">
-            <a class="button-search" href="#">
-              <span class="visually-hidden">
-                Хочу сюда
-              </span>
-            </a>
+            <a class="button-want" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
