Делает сетки компонентов на флексах

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко">
               </a>
             </li>
-            <li class="button-item">
+            <li class="button-item-want">
               <a class="button-want" href="#">Хочу сюда!</a>
             </li>
           </ul>
