--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
                 <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко">
               </a>
             </li>
-            <li class="button-item">
+            <li class="button-item-want">
               <a class="button-want" href="#">Хочу сюда!</a>
             </li>
           </ul>
@@ -48,7 +48,7 @@
       <main class="page-main">
         <section class="main-section">
         <div class="section-content">
-          <h1 class="catalog-header">Гостиницы Седона</h1>
+          <h1 class="catalog-header">Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="./index.html">Главная страница</a>
@@ -60,60 +60,70 @@
           </div>
 
         <form class="search-form" action="https://echo.htmlacademy.ru/" method="GET">
+          <div class="search-form-wrapper">
+            <fieldset class="search-form-section">
+              <legend class="search-form-section-title">Инфраструктура:</legend>
+              <ul class="infrastructure-list">
+                <li class="infrastructure-item">
+                  <input class="infrastructure-input" type="checkbox" id="pool-checkbox" name="infrastructure" value="pool" checked>
+                  <label class="infrastructure-name" for="pool-checkbox">Бассейн</label>
+                </li>
+                <li class="infrastructure-item">
+                  <input class="infrastructure-input" type="checkbox" id="parking-checkbox" name="infrastructure" value="parking" checked>
+                  <label class="infrastructure-name" for="parking-checkbox">Парковка</label>
+                </li>
+                <li class="infrastructure-item">
+                  <input class="infrastructure-input" type="checkbox" id="wifi-checkbox" name="infrastructure" value="wifi">
+                  <label class="infrastructure-name" for="wifi-checkbox">Wi-Fi</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="search-form-section">
+              <legend class="search-form-section-title">Тип жилья:</legend>
+              <ul class="home-type-list">
+                <li class="home-type-item">
+                  <input class="home-type-input" name="home-type" type="radio" id="hotel-radio" value="hotel" checked>
+                  <label class="home-type-name" for="hotel-radio">Гостиница</label>
+                </li>
+                <li class="home-type-item">
+                  <input class="home-type-input" name="home-type" type="radio" id="motel-radio" value="motel">
+                  <label class="home-type-name" for="motel-radio">Мотель</label>
+                </li>
+                <li class="home-type-item">
+                  <input class="home-type-input" name="home-type" type="radio" id="apartment-radio" value="apartment">
+                  <label class="home-type-name" for="apartment-radio">Апартаменты</label>
+                </li>
+              </ul>
+            </fieldset>
+        </div>
+
+        <div class="search-form-wrapper">
           <fieldset class="search-form-section">
-            <legend class="search-form-section-title">Инфраструктура:</legend>
-            <ul class="infrastructure-list">
-              <li class="infrastructure-item">
-                <input class="infrastructure-input" type="checkbox" id="pool-checkbox" name="infrastructure" value="pool" checked>
-                <label class="infrastructure-name" for="pool-checkbox">Бассейн</label>
-              </li>
-              <li class="infrastructure-item">
-                <input class="infrastructure-input" type="checkbox" id="parking-checkbox" name="infrastructure" value="parking" checked>
-                <label class="infrastructure-name" for="parking-checkbox">Парковка</label>
-              </li>
-              <li class="infrastructure-item">
-                <input class="infrastructure-input" type="checkbox" id="wifi-checkbox" name="infrastructure" value="wifi">
-                <label class="infrastructure-name" for="wifi-checkbox">Wi-Fi</label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="search-form-section">
-            <legend class="search-form-section-title">Тип жилья:</legend>
-            <ul class="home-type-list">
-              <li class="home-type-item">
-                <input class="home-type-input" name="home-type" type="radio" id="hotel-radio" value="hotel" checked>
-                <label class="home-type-name" for="hotel-radio">Гостиница</label>
-              </li>
-              <li class="home-type-item">
-                <input class="home-type-input" name="home-type" type="radio" id="motel-radio" value="motel">
-                <label class="home-type-name" for="motel-radio">Мотель</label>
-              </li>
-              <li class="home-type-item">
-                <input class="home-type-input" name="home-type" type="radio" id="apartment-radio" value="apartment">
-                <label class="home-type-name" for="apartment-radio">Апартаменты</label>
-              </li>
-            </ul>
-          </fieldset>
+              <legend class="search-form-section-title">Стоимость,₽</legend>
 
-          <fieldset class="search-form-section">
-            <legend class="search-form-section-title">Стоимость,₽</legend>
+              <div class="price-wrapper">
+                <div class="price-input-wrapper">
+                  <input class="price-input" type="number" id="from" name="from">
+                  <label class="price-input-name" for="from">от</label>
+                </div>
 
-            <input class="price-input" type="number" id="from" name="from">
-            <label class="price-input-name" for="from">от</label>
+                <div class="price-input-wrapper">
+                  <input class="price-input" type="number" id="to" name="to">
+                  <label class="price-input-name" for="to">до</label>
+                </div>
+              </div>
 
-            <input class="price-input" type="number" id="to" name="to">
-            <label class="price-input-name" for="to">до</label>
+              <div class="range-bar">
+                <div class="range-button-left"></div>
+                <div class="range-button-right"></div>
+              </div>
+            </fieldset>
 
-            <div class="range-bar">
-              <div class="range-button-left"></div>
-              <div class="range-button-right"></div>
-            </div>
-          </fieldset>
-
-          <fieldset class="search-form-section">
-            <button class="submit-button-catalog" type="submit">Применить</button>
-            <button class="reset-button" type="reset">Сбросить</button>
-          </fieldset>
+            <fieldset class="search-form-section search-form-section-buttons">
+              <button class="submit-button-catalog" type="submit">Применить</button>
+              <button class="reset-button" type="reset">Сбросить</button>
+            </fieldset>
+        </div>
         </form>
         </section>
 
@@ -126,7 +136,7 @@
                 <option value="rich">Сначала дорогие</option>
               </select>
               <ul class="search-results-change-view">
-                <li class="change-view-item">
+                <li class="change-view-item selected-view">
                   <a class="change-view-button" href="#">
                     <span class="visually-hidden">tiles</span>
                     <img class="change-icons" src="./images/icons/icon-tiles.svg" width="16" height="14" alt="Иконка-плитка">
