--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <section class="section-advantages">
           <ul class="advantages-list">
-            <li class="advantages-item advantages-item-image">
+            <li class="advantages-item advantages-item-image-right">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -77,7 +77,7 @@
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="advantages-item advantages-item-image">
+            <li class="advantages-item advantages-item-image-left">
               <img class="advantages-image" src="./images/photo-2.jpg" width="800" height="385" alt="Фотография каньона">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Там есть мост дьявола</h3>
