--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,16 @@
           <h1 class="catalog-header">Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link" href="./index.html">Главная страница</a>
+                <a class="breadcrumbs-link" href="./index.html">
+                  <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Vector">
+                      <path d="M6.5 0.5L0.5 6.30006V12.5001H12.5V6.30006L6.5 0.5ZM11.5 11.5001H1.5V6.70005L6.5 1.9L11.5 6.70005V11.5001Z"
+                        fill="white" />
+                      <path d="M4.5 10.5001H5.5V8.00005H7.5V10.5001H8.5V7.00005H4.5V10.5001Z" fill="white" />
+                    </g>
+                  </svg>
+                  <span class="visually-hidden">Главная страница</span>
+                </a>
               </li>
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="./catalog.html">Гостиницы</a>
@@ -66,15 +75,15 @@
               <legend class="search-form-section-title">Инфраструктура:</legend>
               <ul class="infrastructure-list">
                 <li class="infrastructure-item">
-                  <input class="infrastructure-input" type="checkbox" id="pool-checkbox" name="infrastructure" value="pool" checked>
+                  <input class="infrastructure-input visually-hidden" type="checkbox" id="pool-checkbox" name="infrastructure" value="pool" checked>
                   <label class="infrastructure-name" for="pool-checkbox">Бассейн</label>
                 </li>
                 <li class="infrastructure-item">
-                  <input class="infrastructure-input" type="checkbox" id="parking-checkbox" name="infrastructure" value="parking" checked>
+                  <input class="infrastructure-input  visually-hidden" type="checkbox" id="parking-checkbox" name="infrastructure" value="parking" checked>
                   <label class="infrastructure-name" for="parking-checkbox">Парковка</label>
                 </li>
                 <li class="infrastructure-item">
-                  <input class="infrastructure-input" type="checkbox" id="wifi-checkbox" name="infrastructure" value="wifi">
+                  <input class="infrastructure-input  visually-hidden" type="checkbox" id="wifi-checkbox" name="infrastructure" value="wifi">
                   <label class="infrastructure-name" for="wifi-checkbox">Wi-Fi</label>
                 </li>
               </ul>
@@ -83,15 +92,15 @@
               <legend class="search-form-section-title">Тип жилья:</legend>
               <ul class="home-type-list">
                 <li class="home-type-item">
-                  <input class="home-type-input" name="home-type" type="radio" id="hotel-radio" value="hotel" checked>
+                  <input class="home-type-input visually-hidden" name="home-type" type="radio" id="hotel-radio" value="hotel" checked>
                   <label class="home-type-name" for="hotel-radio">Гостиница</label>
                 </li>
                 <li class="home-type-item">
-                  <input class="home-type-input" name="home-type" type="radio" id="motel-radio" value="motel">
+                  <input class="home-type-input visually-hidden" name="home-type" type="radio" id="motel-radio" value="motel">
                   <label class="home-type-name" for="motel-radio">Мотель</label>
                 </li>
                 <li class="home-type-item">
-                  <input class="home-type-input" name="home-type" type="radio" id="apartment-radio" value="apartment">
+                  <input class="home-type-input visually-hidden" name="home-type" type="radio" id="apartment-radio" value="apartment">
                   <label class="home-type-name" for="apartment-radio">Апартаменты</label>
                 </li>
               </ul>
@@ -104,12 +113,12 @@
 
               <div class="price-wrapper">
                 <div class="price-input-wrapper">
-                  <input class="price-input" type="number" id="from" name="from">
+                  <input class="price-input" type="number" id="from" name="from" min="0">
                   <label class="price-input-name" for="from">от</label>
                 </div>
 
                 <div class="price-input-wrapper">
-                  <input class="price-input" type="number" id="to" name="to">
+                  <input class="price-input" type="number" id="to" name="to" min="0">
                   <label class="price-input-name" for="to">до</label>
                 </div>
               </div>
