--- a/index.html
+++ b/index.html
@@ -197,5 +197,83 @@
       </div>
       </footer>
     </div>
+
+    <div class="modal-container visually-hidden">
+      <div class="modal modal-search">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form class="modal-search-form" action="https://echo.htmlacademy.ru/" method="post">
+            <div class="field-group">
+              <label class="date-label" for="arrival-date">Дата Заезда:</label>
+              <div class="date-input-wrapper">
+                <input class="date-input" type="date" id="arrival-date">
+                <span class="error-text input-message">Мы не можем отправить вас в прошлое.</span>
+              </div>
+            </div>
+            <div class="field-group">
+              <label class="date-label" for="departure-date">Дата Выезда:</label>
+              <div class="date-input-wrapper">
+                <input class="date-input" type="date" id="departure-date">
+                <span class="info-text input-message">На эти даты есть свободные номера. Пока есть.</span>
+              </div>
+            </div>
+
+            <div class="field-group field-group-two-columns">
+              <label class="count-people">
+                <span class="count-people-text">Взрослые:</span>
+                <div class="count-wrapper">
+                  <button class="button-minus count-button" type="button">
+                    <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
+                    </svg>
+                    <span class="visually-hidden">Меньше.</span>
+                  </button>
+                  <input class="input-count-people" type="number">
+                  <button class="button-plus count-button" type="button">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
+                    </svg>
+
+                    <span class="visually-hidden">Больше.</span>
+                  </button>
+                </div>
+              </label>
+
+              <label class="count-people">
+                <span class="count-people-text">Дети:
+                  <span class="count-tooltip-button">
+                    <svg width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white"/>
+                    </svg>
+                    <span class="count-tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  </span>
+                </span>
+                <div class="count-wrapper">
+                  <button class="button-minus count-button" type="button">
+                    <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3" />
+                    </svg>
+
+                    <span class="visually-hidden">Меньше.</span>
+                  </button>
+                  <input class="input-count-people" type="number">
+                  <button class="button-plus count-button" type="button">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
+                    </svg>
+
+                    <span class="visually-hidden">Больше.</span>
+                  </button>
+                </div>
+              </label>
+            </div>
+            <button class="modal-search-button" type="submit">Найти</button>
+          </form>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
