--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
 
   <body>
@@ -53,11 +54,12 @@
         </section>
 
         <section class="section-about">
-          <h2 class="about-page">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <h2 class="about-page heading-level-two">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="about-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
 
         <section class="section-advantages">
+          <h2 class="visually-hidden">Преимущества.</h2>
           <ul class="advantages-list">
             <li class="advantages-item advantages-item-image-right">
               <div class="advantages-wrapper">
@@ -98,11 +100,12 @@
         </section>
 
         <section class="promo-text">
-          <h2 class="promo-about-page">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="promo-about-text">Опытный персонал и качественное обслуживание!</p>
+          <h2 class="promo-about-page heading-level-two">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="promo-about-text about-text">Опытный персонал и качественное обслуживание!</p>
         </section>
 
         <section class="further-benefits">
+          <h2 class="visually-hidden">Дополнительные преимущества.</h2>
           <ul class="benefits-list">
             <li class="benefits-item-blue">
               <img class="benefits-icons" src="./images/icons/icon-home.svg" width="75" height="72" alt="Иконка домика.">
@@ -124,7 +127,7 @@
 
         <section class="booking">
           <div class="booking-wrapper">
-            <h2 class="about-page">Заинтересовались?</h2>
+            <h2 class="about-page heading-level-two">Заинтересовались?</h2>
             <p class="about-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button-hotel-search" href="#">Поиск гостиницы в Седоне</a>
           </div>
@@ -134,13 +137,13 @@
       <footer class="main-footer">
         <section class="mailing-list ">
           <div class="mailing-list-wrapper">
-            <h2 class="mailing-list-header about-page">Подпишитесь на рассылку</h2>
+            <h2 class="mailing-list-header about-page heading-level-two">Подпишитесь на рассылку</h2>
             <p class="mailing-list-text about-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form  class="mailing-list-form" action="https://echo.htmlacademy.ru">
               <label class="visually-hidden" for="email">
                 Ваш e-mail.
               </label>
-              <input class="input-email" type="email" id="email" name="email" placeholder="Ваш e-mail">
+              <input class="input-email" type="email" id="email" name="email" placeholder="Ваш e-mail" required>
               <button class="submit-button" type="submit">
                 Подписаться
               </button>
@@ -198,32 +201,32 @@
       </footer>
     </div>
 
-    <div class="modal-container visually-hidden">
+    <div class="modal-container">
       <div class="modal modal-search">
         <button class="modal-close-button">
-          <span class="visually-hidden">Закрыть</span>
+          <span class="visually-hidden">Закрыть.</span>
         </button>
         <section class="modal-content">
-          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <h2 class="modal-title heading-level-two">Поиск гостиницы в Седоне</h2>
           <form class="modal-search-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="field-group">
               <label class="date-label" for="arrival-date">Дата Заезда:</label>
               <div class="date-input-wrapper">
-                <input class="date-input" type="date" id="arrival-date">
+                <input class="date-input" type="text" id="arrival-date" required placeholder="1 сентября 2023">
                 <span class="error-text input-message">Мы не можем отправить вас в прошлое.</span>
               </div>
             </div>
             <div class="field-group">
               <label class="date-label" for="departure-date">Дата Выезда:</label>
               <div class="date-input-wrapper">
-                <input class="date-input" type="date" id="departure-date">
+                <input class="date-input" type="text" id="departure-date" required placeholder="1 сентября 2023">
                 <span class="info-text input-message">На эти даты есть свободные номера. Пока есть.</span>
               </div>
             </div>
 
             <div class="field-group field-group-two-columns">
-              <label class="count-people">
-                <span class="count-people-text">Взрослые:</span>
+              <div class="count-people">
+                <label for="adult-count" class="count-people-text">Взрослые:</label>
                 <div class="count-wrapper">
                   <button class="button-minus count-button" type="button">
                     <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -231,7 +234,7 @@
                     </svg>
                     <span class="visually-hidden">Меньше.</span>
                   </button>
-                  <input class="input-count-people" type="number">
+                  <input id="adult-count" class="input-count-people" type="number" required placeholder="1">
                   <button class="button-plus count-button" type="button">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -240,17 +243,17 @@
                     <span class="visually-hidden">Больше.</span>
                   </button>
                 </div>
-              </label>
+              </div>
 
-              <label class="count-people">
-                <span class="count-people-text">Дети:
+              <div class="count-people">
+                <label for="child-count" class="count-people-text">Дети:
                   <span class="count-tooltip-button">
                     <svg width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white"/>
                     </svg>
                     <span class="count-tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
-                </span>
+                </label>
                 <div class="count-wrapper">
                   <button class="button-minus count-button" type="button">
                     <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -259,7 +262,7 @@
 
                     <span class="visually-hidden">Меньше.</span>
                   </button>
-                  <input class="input-count-people" type="number">
+                  <input id="child-count" class="input-count-people" type="number" placeholder="0">
                   <button class="button-plus count-button" type="button">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3" />
@@ -268,7 +271,7 @@
                     <span class="visually-hidden">Больше.</span>
                   </button>
                 </div>
-              </label>
+              </div>
             </div>
             <button class="modal-search-button" type="submit">Найти</button>
           </form>
